--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,10 @@ services:
     volumes:
       - ./.env:/app/.env
     depends_on:
-      - kafka
       - postgres
+      - redis
+      - kafka
+
 
   postgres:
     image: postgres:17
@@ -30,6 +32,7 @@ services:
 
   kafka:
     image: apache/kafka:3.7.0
+    restart: unless-stopped
     ports:
        - "9092:9092"
     environment:
@@ -44,8 +47,26 @@ services:
       KAFKA_CONTROLLER_LISTENER_NAMES: "CONTROLLER"
       KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: "1"
+    healthcheck:
+      test: [ "CMD-SHELL", "kafka-topics.sh --bootstrap-server localhost:9092 --list || exit 1" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
     volumes:
       - ./kafka-data:/tmp/kraft-combined-logs
 
+  redis:
+    image: redis:alpine
+    restart: unless-stopped
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    environment:
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+
 volumes:
   pg_data:
+  kafka-data:
+  redis_data:
