--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,8 +27,8 @@ services:
       - "5432:5432"
     volumes:
       - pg_data:/var/lib/postgresql/data
-      - ./dump/user_dump.sql:/docker-entrypoint-initdb.d/user_dump.sql
-      - ./dump/wblvl0_2025-08-09_1-41-00.sql:/docker-entrypoint-initdb.d/wblvl0_2025-08-09_1-41-00.sql
+#      - ./dump/user_dump.sql:/docker-entrypoint-initdb.d/user_dump.sql
+#      - ./dump/wblvl0_2025-08-09_1-41-00.sql:/docker-entrypoint-initdb.d/wblvl0_2025-08-09_1-41-00.sql
 
   kafka:
     image: apache/kafka:3.7.0
